# iqMeteo

./: .gitmodules  CMakeLists.txt  sql.dbm
client/: CMakeLists.txt  IqWamp
client/src/: iqmeteoguiairdrome.cpp  iqmeteoguiairdrome.h  iqmeteoguimainmodel.cpp  iqmeteoguimainmodel.h  iqmeteoguimainwindow.cpp  iqmeteoguimainwindow.h  iqmeteoguimainwindow.ui  main.cpp
server/: CMakeLists.txt  IqOrm  airports.sql  sql.dbm
server/src/: iqmeteo.h  iqmeteoapplication.cpp  iqmeteoapplication.h  iqmeteomessageparser.cpp  iqmeteomessageparser.h  iqmeteometarparser.cpp  iqmeteometarparser.h  iqmeteoudplistener.cpp  iqmeteoudplistener.h  main.cpp
server/src/entity/: iqmeteoabstractmessage.cpp  iqmeteoabstractmessage.h  iqmeteoairdrome.cpp  iqmeteoairdrome.h  iqmeteocolor.cpp  iqmeteocolor.h  iqmeteometar.cpp  iqmeteometar.h  iqmeteometarwind.cpp  iqmeteometarwind.h  iqmeteopreveilingvisibility.cpp  iqmeteopreveilingvisibility.h  iqmeteorunwayvisibility.cpp  iqmeteotextdecoration.cpp  iqmeteotextdecoration.h
src/: iqmeteo.cpp  iqmeteo.h  iqmeteomainwindow.cpp  iqmeteomainwindow.h  iqmeteomainwindow.ui  iqmeteomessageparser.cpp  iqmeteomessageparser.h  iqmeteometarparser.cpp  iqmeteometarparser.h  iqmeteoudplistener.cpp  iqmeteoudplistener.h  main.cpp
src/entity/: iqmeteoairdrome.cpp  iqmeteoairdrome.h  iqmeteometar.cpp  iqmeteometar.h  iqmeteometarwind.cpp  iqmeteopreveilingvisibility.cpp  iqmeteorunwayvisibility.cpp  iqmeteorunwayvisibility.h
